# a2a-agent-inspector

./: .dockerignore  .gitignore  Dockerfile  README.md  docker.sh
backend/: .gitignore  README.md  __main__.py  pyproject.toml
backend/src/a2a_inspector/: __init__.py  __main__.py  main.py  services.py
docker/: nginx.conf  supervisord.conf
frontend/: .env.local.template  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatInterface.tsx  Editor.tsx  LoadCard.tsx  theme-toggle.tsx
frontend/src/components/ui/: button.tsx
frontend/src/lib/api/: api.ts
